[project]
name = "sai"
version = "0.4.1"
description = "Slack AI Command Interpreter - A context-aware Slack bot with RAG memory and command execution"
requires-python = ">=3.12"
dependencies = [
    "slack-sdk>=3.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "duckdb>=1.1.0",
    "structlog>=24.2.0",
    "tomli>=2.0.1",
    "anyio>=4.4.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "json-repair>=0.30.0",
]

[project.scripts]
sai = "sai.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["sai", "config"]
